Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.4.0-beta1
-
None
-
Linux, Windows
Description
- Creator 3.4 at cc469f6466c82e34d0ceeaa6c72d4e4a8b86ad7c
- Open a library project-
- Press run
- Dialog titled "Custom Executable" appears
- Press ESC
- Note: Nothing happens, dialog remains open
Sort-of resembles the classical bug appearing in each release (app output pane opens with error report about not finding the binary despite cancel).
Btw, this typical happens when one has some libs + one app open investigating sth. Creator could be smart and just run the app project in that setup.