Custom Executable RunConfiguration: Esc should close dialog

Change-Id: Ifaa4d87c73d2597a018d867f3c081113132e76ee
Task-number: QTCREATORBUG-14202
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>